# mrs-jax

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  references.bib  requirements.txt
docs/reference/: modules.rst  mrs_jax.hermes.rst  mrs_jax.io.rst  mrs_jax.io_lcmodel.rst  mrs_jax.io_philips.rst  mrs_jax.mega_press.rst  mrs_jax.mega_press_jax.rst  mrs_jax.mrsi_sim.rst  mrs_jax.phase.rst  mrs_jax.preproc.rst  mrs_jax.qc.rst  mrs_jax.quantify.rst  mrs_jax.rst
src/mrs_jax/: __init__.py  io_lcmodel.py  io_philips.py  mega_press_jax.py  mrsi_sim.py  quantify.py
tests/: test_epsi_readout.py  test_lcmodel_io.py  test_mega_press.py  test_mrs_fpc.py  test_mrs_hermes.py  test_mrs_integration.py  test_mrs_io.py  test_mrs_jax.py  test_mrs_jax_align.py  test_mrs_phase_correction.py  test_mrs_preproc.py  test_mrs_qc.py  test_mrs_quantification.py  test_mrsi_simulator.py  test_philips_io.py  test_simulator_validation.py  test_wand_phantom.py
