[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrs-jax"
version = "0.1.0"
description = "MR Spectroscopy processing in JAX — MEGA-PRESS, HERMES, quantification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Michael Hough"},
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
jax = ["jax>=0.4", "jaxlib>=0.4"]
fsl = ["fsl-mrs>=2.0"]
io = ["mapvbvd>=0.5"]
all = ["mrs-jax[jax,fsl,io]"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
doc = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
